# parallel_programming-2015

./: README.md
async_chat/: .gitignore
async_chat/client/src/java/ru/spbau/chat/client/: Client.java
async_chat/commons/src/java/ru/spbau/chat/commons/: AbstractCompletionHandler.java  IOUtils.java  ReadCompletionHandler.java  WriteCompletionHandler.java
async_chat/server/src/java/ru/spbau/chat/server/: Server.java
convolution/: CMakeLists.txt  Makefile
convolution/resources/: convolution.cl
convolution/src/: main.cpp  matrix_t.h
prefix_sum/: CMakeLists.txt  Makefile
prefix_sum/resources/: prefix_sum.cl
prefix_sum/src/: buffer_t.h  main.cpp
